Fixed bug with menu overflow on small screens
*fixed bugs

--- a/pages/product-manager/src/assets/css/main.scss
+++ b/pages/product-manager/src/assets/css/main.scss
@@ -52,14 +52,6 @@ html > body {
   transform: scaleY(1);
 }
 
-.nav-cart-item-text {
-  font-size: 1.2em;
-  font-weight: 500;
-}
-
-.cart-item-info {
-
-}
 
 .nav-cart-item-price {
   font-weight: 300;
